--- a/content/airtime.mdx
+++ b/content/airtime.mdx
@@ -17,7 +17,7 @@ tags: ["Web application", "Landing page"]
 
 Airtime is an online UX research tool designed to accelerate the workflow of product teams. It offers two key features: the video call analyzer, which extracts insights and identifies patterns from video calls. You can simply ask questions, and Airtime gathers the answers from multiple videos for you, saving valuable time in the analysis process. The second feature is the website survey widget, which allows users to seamlessly collect and summarize responses directly on their websites, eliminating the need to manually review feedback one by one.
 
-### My Role
+### My role
 
 As the only designer on a team of five, I was responsible for all aspects of design, including:
 
@@ -28,20 +28,20 @@ As the only designer on a team of five, I was responsible for all aspects of des
 - Participating in user interviews and brainstorming sessions as part of the product discovery process.
 - Conducting competitor analysis to identify opportunities for introducing new and valuable features.
 
-## Understanding the Problem
+## Understanding the problem
 
-### Research Insights & Challenges
+### Research insights & challenges
 
 During initial user interview sessions, we discovered that many small product teams lack a dedicated UX expert. These teams often composed of product managers, developers, and founders who understand the importance of gathering user data to improve their products but face two significant challenges: limited time to find meaningful insights in the information they gathered and a lack of efficient methods to analyze and organize collected data.
 
 Through these interviews, we identified that these teams primarily rely on two research methods:
 
 - **Surveys**: Used to gather structured feedback on specific product-related questions.
-- **User Interviews**: Conducted to gain deeper insights from users or potential users.
+- **User interviews**: Conducted to gain deeper insights from users or potential users.
 
 While eager to collect data directly from users, these teams struggled to process and organize the information effectively. Airtime aimed to address this gap by providing guidance and time-saving solutions to achieve actionable outcomes.
 
-### Design System Development
+### Design system development
 
 When I joined the project, I observed an opportunity to enhance the team’s workflow by introducing a consistent design system. Although our small team collaborated to refine design processes, the design system needed more structure. In addition to addressing UX research bottlenecks, I worked on establishing a design system to ensure consistency and streamline future development.
 
@@ -57,17 +57,17 @@ When I joined the project, I observed an opportunity to enhance the team’s wor
 </Fade>
 *Buttons of Airtime design system*
 
-## Website Surveys
+## Website surveys
 
-### Enhancing the Website Survey Widget
+### Enhancing the website survey widget
 
 When I joined Airtime, a website survey widget feature was already in place. This feature allowed product teams to invite participants to user interviews directly on their websites. This feature didn't get so much attention at this time but recognizing its potential, we decided to use this feature as a starter point and enhance it to solve the survey data collection challenges product teams facing.
 
-### Researching Best Practices
+### Researching best practices
 
 Through user interviews, we realized our target audience already collected user data but often lacked the knowledge or time to analyze the results. To address this, we gathered feedback from UX experts to understand their approaches to creating and analyzing surveys. This research helped identify areas where Airtime could mimick and automate the expert's processes and provide it as a feature in Airtime for small product teams.
 
-### Survey Templates
+### Survey templates
 
 We identified common survey types, such as CSAT (Customer Satisfaction) and CES (Customer Effort Score), through expert feedback and online research. This ensured users didn’t have to create a survey from scratch, as they already had guidance on what to ask and where to display these surveys on their websites.
 Recognizing our audience’s limited UX knowledge, we renamed these surveys to focus on their purpose rather than their technical names. For instance, a CES survey was renamed to ‘Find bad user experiences in your product,’ making it more intuitive for non-UX professionals.
@@ -83,12 +83,12 @@ While this feature helped users create proper surveys, another challenge emerged
 </Fade>
 *Airtime survey templates*
 
-### Streamlining Survey Results with AI
+### Streamlining survey results with AI
 
 To help our users with analysing the results, we implemented AI to automate the manual analysis processes that experts does in their daily work like:
 
-- **Grouping Responses**: Responses were automatically categorized into negative, neutral, or positive groups to highlight pain points and successes.
-- **Thematic Analysis**: AI identified recurring themes, grouping responses under clear titles and subtitles, and highlighting patterns without requiring users to review every response manually.
+- **Grouping responses**: Responses were automatically categorized into negative, neutral, or positive groups to highlight pain points and successes.
+- **Thematic analysis**: AI identified recurring themes, grouping responses under clear titles and subtitles, and highlighting patterns without requiring users to review every response manually.
 - **Detailed Insights**: Users could also view specific answers within each theme and group, striking a balance between automation and transparency.
 
 Before we implemented this feature on the platform we validated it by collaborating with teams willing to share survey data, refining our AI analysis based on their feedback. This ensured the solution met user needs effectively.
@@ -114,15 +114,15 @@ Before we implemented this feature on the platform we validated it by collaborat
 </Fade>
 *Airtime survey score*
 
-### Results
+### Competiton kicked in
 
 By automating these tasks, the enhanced survey widget saved teams significant time and effort. Several customers adopted the feature as part of their research process, focusing on applying insights rather than getting overwhelmed by the analysis process.
 
 But after successfully launching the survey feature, we faced increased competition as some key players introduced similar solutions. Despite achieving very good results in direct comparisons, standing out in a crowded market became challenging. To make a significant leap forward, we decided to address user interview analysis, an area that had clear room for improvement in existing tools.
 
-## Expanding to User Interview Analysis
+## Expanding to user interview analysis
 
-### Market Research & Insights
+### Market research & insights
 
 We conducted market research and tested advanced AI-driven interview analysis tools, discovering notable gaps:
 
@@ -130,7 +130,7 @@ We conducted market research and tested advanced AI-driven interview analysis to
 - They lacked alignment with real research processes, where specific answers to predefined scripts are more valuable than general summaries.
 - Common research topics, such as identifying user pain points, were often overlooked.
 
-### Designing a Researcher-Centric Workflow
+### Designing a researcher-centric workflow
 
 Recognizing these shortcomings, we conceptualized a feature that would better support the typical research workflow. Since analyzing videos is a development-heavy feature, we prioritized these opportunities based on their complexity and how we could solve and integrate them into our tool. As a result, we decided to start development by offering a feature that collects answers to the most common user research topics that researchers are interested in during a user interview. We called it AI Highlights.
 
@@ -163,11 +163,11 @@ AI analyzed transcripts, identifying snippets where relevant answers appeared, h
 </Fade>
 *Airtime video analysis - Highlights*
 
-### Realigning Personas
+### Realigning personas
 
 Initially, we targeted small product teams without UX knowledge, but after launching the video analysis feature, we found that the quality of insights depended on the quality of the interviews. Poorly conducted interviews with unclear questions led to weaker analysis, while videos from research experts produced better results. This led us to refocus on researchers, who are more experienced in conducting interviews and better suited to benefit from the tool, since on our early tests our Ai found significantly more and better highlights from these videos.
 
-### Early Feedback & Iterations
+### Early feedback
 
 The initial launch of the interview analysis feature received a warm reception, with researchers praising how effectively the AI extracted relevant parts of interviews based on the predefined themes.
 
@@ -176,12 +176,12 @@ However, got received the same feedback time after time, that revealed the featu
 - **Scalability**: The tool initially worked on single interviews, but users needed insights across multiple sessions to draw broader conclusions that they also do manually when they analyse user interviews.
 - **Customizability**: Researchers wanted the ability to add their own questions, tailoring the tool to their specific needs, that also aligned with our initial findings.
 
-### Enhancements & Results
+### Enhancements
 
 We addressed the gaps by enhancing the AI analysis feature with two key improvements:
 
-- **Multi-Interview Analysis (Studies)**: A multi-interview analysis feature (which we called Studies), enabling insights to be aggregated across interview sessions for deeper and more scalable results. This allowed users to organize videos into larger groups, similar to conducting multiple user interviews on a specific theme, and obtain summarized insights and recurring patterns across several videos.
-- **Study Questions**: The ability to define custom questions for analysis, giving researchers full control over their workflows. In addition to general questions, they could ask research-specific questions, and our AI collected the answers.
+- **Multi-interview analysis (Studies)**: A multi-interview analysis feature (which we called Studies), enabling insights to be aggregated across interview sessions for deeper and more scalable results. This allowed users to organize videos into larger groups, similar to conducting multiple user interviews on a specific theme, and obtain summarized insights and recurring patterns across several videos.
+- **Study questions**: The ability to define custom questions for analysis, giving researchers full control over their workflows. In addition to general questions, they could ask research-specific questions, and our AI collected the answers.
 
 <Fade triggerOnce>
   <Image
