Update airtime case study

--- a/content/airtime.mdx
+++ b/content/airtime.mdx
@@ -21,10 +21,10 @@ Airtime is an online UX research tool designed to accelerate the workflow of pro
 
 As the only designer on a team of five, I was responsible for all aspects of design, including:
 
-- Crafting wireframes, building prototypes, and designing the UI for both the web app and the landing page.
+- Defining user flows to ensure intuitive navigation and seamless user experiences.
 - Creating a comprehensive design system to ensure visual and functional consistency across the platform and future updates.
 - Designing social media assets to support marketing efforts.
-- Developing the landing page in Webflow, ensuring alignment with the overall platform design.
+- Developing [Airtime's website](https://www.airtimeux.com) in Webflow, ensuring alignment with the overall platform design.
 - Participating in user interviews and brainstorming sessions as part of the product discovery process.
 - Conducting competitor analysis to identify opportunities for introducing new and valuable features.
 
@@ -85,10 +85,12 @@ While this feature helped users create proper surveys, another challenge emerged
 
 ### Streamlining survey results with AI
 
-To help our users with analysing the results, we implemented AI to automate the manual analysis processes that experts does in their daily work like:
+When it came to organizing and analyzing survey responses, we knew the time-consuming manual process of analysing the results was a bottleneck. Here entered the so-called AI, because as we all know these days, AI is the magic word everyone claims can solve all the world’s problems!
 
+In reality, we aimed to create a practical solution to automate the most time-consuming aspects of survey analysis:
+
+- **Visualizing Data**: We introduced charts for numeric responses, providing a clear and intuitive overview that helps users quickly identify trends.
 - **Grouping responses**: Responses were automatically categorized into negative, neutral, or positive groups to highlight pain points and successes.
-- **Thematic analysis**: AI identified recurring themes, grouping responses under clear titles and subtitles, and highlighting patterns without requiring users to review every response manually.
 - **Detailed Insights**: Users could also view specific answers within each theme and group, striking a balance between automation and transparency.
 
 Before we implemented this feature on the platform we validated it by collaborating with teams willing to share survey data, refining our AI analysis based on their feedback. This ensured the solution met user needs effectively.
