Add airtime summary

--- a/content/airtime.mdx
+++ b/content/airtime.mdx
@@ -11,6 +11,10 @@ mobileImage: /img/airtime_mobile.png
 tags: ["Web application", "Landing page"]
 ---
 
+## Project summary
+
+As the only designer on a five-person team, I led the design of Airtime, a UX research tool that accelerates how product teams gather and analyze insights. I designed the platform's user interface, defined user flows, created a comprehensive design system, and developed the website. My work helped evolve Airtime from a single-feature startup into a comprehensive platform, now used by UX researchers and agencies to streamline survey and interview analysis.
+
 ## Introduction
 
 ### Project overview
@@ -23,6 +27,7 @@ As the only designer on a team of five, I was responsible for all aspects of des
 
 - Defining user flows to ensure intuitive navigation and seamless user experiences.
 - Creating a comprehensive design system to ensure visual and functional consistency across the platform and future updates.
+- Designing high fidelity UI designs for development and prototypes for user tests.
 - Designing social media assets to support marketing efforts.
 - Developing [Airtime's website](https://www.airtimeux.com) in Webflow, ensuring alignment with the overall platform design.
 - Participating in user interviews and brainstorming sessions as part of the product discovery process.
